Simplify WebGL dirty notifications.

The WebGL context attempts to optimize dirty notifications to the
canvas and compositor, but the logic was fragile if the compositor
skips a frame due to policy decisions. There were two almost-redundant
state variables governing this.

Remove animation_frame_in_progress_, and reuse marked_canvas_dirty_
for its purpose, clearing marked_canvas_dirty_ in FinalizeFrame.

Verified with the test case from the bug and switching spaces 30 times
on macOS Mojave.

Bug: 895423
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I456194746a1d20f4f2874b13c6cf6ba54dcf4ea1
Reviewed-on: https://chromium-review.googlesource.com/c/1281963
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Commit-Queue: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600553}
Former-commit-id: a614021bc653b35bef12c80407b2c3b92dad3839